<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PreferenciaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="404dp"
                android:layout_height="65dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/tvNombPref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:text="TextView"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSaludo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="TextView"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.449"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.023" />

            <TextView
                android:id="@+id/tvEligeIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/seleccione_los_idiomas_que_maneja"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNick"
                app:layout_constraintVertical_bias="0.07" />

            <CheckBox
                android:id="@+id/cbEspaniol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espaniol"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEligeIdioma"
                app:layout_constraintVertical_bias="0.066" />

            <CheckBox
                android:id="@+id/cbIngles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.386"
                app:layout_constraintStart_toEndOf="@+id/cbEspaniol"
                app:layout_constraintTop_toBottomOf="@+id/tvEligeIdioma"
                app:layout_constraintVertical_bias="0.066" />

            <CheckBox
                android:id="@+id/cbAleman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aleman"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbEspaniol"
                app:layout_constraintVertical_bias="0.071" />

            <CheckBox
                android:id="@+id/cbOtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/cbAleman"
                app:layout_constraintTop_toBottomOf="@+id/cbIngles"
                app:layout_constraintVertical_bias="0.071" />

            <EditText
                android:id="@+id/tvIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="148dp"
                android:hint="@string/ingresa_otro_idioma"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbAleman"
                app:layout_constraintVertical_bias="0.154" />

            <TextView
                android:id="@+id/tvPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfil_del_usuario"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIdioma"
                app:layout_constraintVertical_bias="0.165" />

            <EditText
                android:id="@+id/tvIngresaNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_un_nickname"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPerfil"
                app:layout_constraintVertical_bias="0.152" />

            <EditText
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_tu_edad"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIngresaNick"
                app:layout_constraintVertical_bias="0.181" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEdad" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>